c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_lex/dot_bad_token_2.c
struct s {
    int a;
};

int main(void) {
    struct s x;
    // Recognize .0foo as an invalid token instead of a struct member operator
    return x.0foo;
}